--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,23 +2,31 @@
 # http://symfony.com/doc/current/book/security.html
 security:
 
-    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    encoders:
+        AppBundle\Entity\Usuarios:
+            { algorithm: sha1, iterations: 1, encode_as_base64: false }
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
+
     providers:
-        in_memory:
-            memory: ~
+        usuarios:
+           entity: { class: AppBundle\Entity\Usuarios }
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
-            anonymous: ~
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+       frontend:
+           pattern: ^/*
+           security: true
+           anonymous: ~
+           form-login: 
+               login_path: login
+               check_path: login_check
+           logout: 
+               path: logout
+               target: home
+               
+    access_control:
+       - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/*, roles: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH, ROLE_SUPER_ADMIN  ] }
