--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+easy_admin:
+    entities:
+        Usuarios:  AppBundle\Entity\Usuarios
+        
